# SciQ

./: README.md  config.yaml  pyproject.toml  run_forge.py
forge/: __init__.py  config.py  lora.py
forge/data/: __init__.py  curriculum.py  datasets.py  pair_builder.py
forge/verify/: __init__.py  code_sandbox.py  math_verifier.py  process_verifier.py
scripts/: __init__.py  evaluate.py  phase1_sft.py  phase2_dpo.py  phase2_generate.py  phase3_refine.py
